fix details loading and pagination overflow

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -88,8 +88,6 @@ $repeat: 30;
 	width: 100%;
 	height: 100%;
 	padding: 3.25rem 0;
-	border-radius: 12px;
-	box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.25);
 	backdrop-filter: blur(16px) brightness(70%);
 	-webkit-backdrop-filter: blur(16px) brightness(70%);
 	overflow: hidden;
@@ -99,9 +97,9 @@ $repeat: 30;
 .info {
 	padding: 0 3rem;
 	margin: 0 0.25rem;
-	max-height: 100%;
+	height: 100%;
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
 	gap: 2.4rem;
 	overflow: auto;
 
@@ -113,11 +111,9 @@ $repeat: 30;
 	&::-webkit-scrollbar {
 		width: 8px;
 	}
-
 	&::-webkit-scrollbar-track {
 		background: none;
 	}
-
 	&::-webkit-scrollbar-thumb {
 		background: transparentize(var.$desertSand, 0.5);
 		border-radius: 2px;
@@ -126,11 +122,11 @@ $repeat: 30;
 	figure {
 		border: 8px solid var.$linen;
 		border-radius: 4px;
-		max-width: 300px;
-		height: fit-content;
-		overflow: hidden;
 		margin: 0 auto;
-		flex: 1 2 auto;
+		max-width: 320px;
+		min-height: 200px;
+		height: fit-content;
+		flex: 1 1 40%;
 
 		img {
 			display: block;
@@ -140,10 +136,10 @@ $repeat: 30;
 }
 
 .details-text {
-	flex: 2 1 50%;
 	color: var.$linen;
 	overflow-x: hidden;
 	overflow-wrap: break-word;
+	flex: 1 1 50%;
 
 	p {
 		margin-top: 24px;
@@ -166,14 +162,8 @@ $repeat: 30;
 	.details-box {
 		max-width: 60%;
 		max-height: 80%;
-	}
-
-	.info {
-		flex-direction: row;
-		flex-wrap: wrap;
-		figure {
-			width: 300px;
-		}
+		border-radius: 12px;
+		box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.25);
 	}
 }
 
